name:                dockerfile
version:             0.2.0
synopsis:            A Haskell DSL for generating Dockerfiles
description:         A Haskell DSL for generating Dockerfiles
license:             MIT
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
copyright:           (c) 2018 Christopher Reichert <creichert07@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/creichert/dockerfile

library
  exposed-modules:     Data.Docker
  other-modules:       Control.Monad.Writer
  other-extensions:    OverloadedStrings
  build-depends:       base == 4.*
  default-language:    Haskell2010

test-suite spec
  build-depends:  base == 4.*, dockerfile, hspec
  ghc-options:    -Wall
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
